SCRUM-4 :recycle: Refactor: 댓글 도메인의 domain 디렉토리 하위 클래스 리팩토링